fix enviroment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 #spring.datasource.username=u3154_1RZYHqU3nA
 #spring.datasource.password=YSlqfCJ!5gDAH+DL!rv.Sw9G
 
-spring.datasource.url=jdbc:mysql://database.dptcloud.vn:3306/s3154_TEST
-spring.datasource.username=u3154_1RZYHqU3nA
-spring.datasource.password=YSlqfCJ!5gDAH+DL!rv.Sw9G
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # JDBC Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -35,8 +35,8 @@ server.port=8080
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=nguyentuakinapy@gmail.com
-spring.mail.password=tmng fbpc dipy tsse
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
