--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,26 @@
-#
 # MySQL Connection
-#spring.datasource.url=jdbc:mysql://database.dptcloud.vn:3306/s3154_TEST?useUnicode=true&characterEncoding=utf8mb4&useSSL=false&serverTimezone=UTC&autoReconnect=true&allowPublicKeyRetrieval=true
-#spring.datasource.username=u3154_1RZYHqU3nA
-#spring.datasource.password=YSlqfCJ!5gDAH+DL!rv.Sw9G
-
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-
-# JDBC Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA & Hibernate
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto = none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # HikariCP (Connection Pool)
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.pool-name=HikariPool
 spring.datasource.hikari.max-lifetime=2000000
 spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.pool-name=HikariPool
 
-
+# File Upload Limits
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-#spring.resources.cache.period=0
-#spring.web.resources.cache.cachecontrol.no-store=true
-
-server.port=8080
-
+# Mail Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
@@ -40,4 +28,5 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.jpa.hibernate.ddl-auto = none
+# Server
+server.port=8080
