--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Server
 server.port=8080
+
+logging.level.org.springframework.boot.autoconfigure=info
+spring.security.user.name=none
+spring.security.user.password=none
+spring.security.user.enabled=false
