--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
 		    <artifactId>java-dotenv</artifactId>
 		    <version>5.2.2</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 		<dependency>
 			<groupId>commons-io</groupId>
